--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,9 +19,26 @@ jobs:
           cache: "npm"
       - name: Install the dependencies
         run: npm install
-      - name: Start the server
-        run: npm start & 
       - name: Run the unit tests
         run: npm run test:unit
       - name: Show SoftUni username
         run: echo "nikolayvf"
+
+  ui_test:
+    needs: build_and_test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js version 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: "npm"
+      - name: Install the dependencies
+        run: npm install
+      - name: Install Playwright
+        run: npx playwright install
+      - name: Start the application
+        run: npm start &
+      - name: Run the ui tests
+        run: npm run test:ui
