--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout the repository on the machine
+      - name: Checkout the repository on the machine
         uses: actions/checkout@v4
       - name: Use Node.js version 20.x
         uses: actions/setup-node@v4
@@ -44,7 +44,8 @@ jobs:
         run: npm start &
       - name: Run the ui tests
         run: npm run test:ui
- deploy:
+
+  deploy:
     needs: ui_test
     runs-on: ubuntu-latest
     steps:
